update schema swagger
